fix issue with button text wrapping onto new line
fix issue where the text in the button in the call to action was wrapping to a new
line by changing text wrapping

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ button {
     font-size: 18px;
     border-radius: 10px;
     padding: 5px 25px;
+    max-height: 43px;
 }
 
 .hero-img {
@@ -176,6 +177,8 @@ button {
 
 .call-button {
     border-color: #F9FAF8;
+    align-self: center;
+    text-wrap: nowrap;
 }
 
 .footer {
